--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "api-tea",
   "version": "1.0.0",
   "description": "API to serve chinese tea data",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "author": "pntbr - stephane.langlois@scopyleft.fr ",
+  "license": "CC0-1.0",
+  "main": "index.mjs",
+  "engines": {
+    "node": "11.15.x"
   },
-  "author": "",
-  "license": "ISC",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --experimental-modules --no-warnings index.mjs"
+  },
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "express": "^4.17.1"
