convert yaml files to json

--- a/data/yaml/brewing-types.yaml
+++ b/data/yaml/brewing-types.yaml
@@ -1,15 +1,15 @@
-蓋碗泡法:
+- zh: 蓋碗泡法
   pinyin: GàiWǎn PàoFǎ
   fr: infusion au gaiwan
-茶盅泡法:
+- zh: 茶盅泡法
   pinyin: CháZhōng PàoFǎ
   fr: infusion au zhong
-茶壺泡法:
+- zh: 茶壺泡法
   pinyin: ChaHu PàoFǎ
   fr: infusion en théière
-茶杯泡法:
+- zh: 茶杯泡法
   pinyin: CháBēi PàoFǎ
   fr: infusion en verre
-煮泡法:
+- zh: 煮泡法
   pinyin: Zhu PàoFǎ
   fr: décoction en bouilloire
