--- a/data/yaml/families.yaml
+++ b/data/yaml/families.yaml
@@ -1,24 +1,24 @@
-廣東烏龍:
+- zh: 廣東烏龍
   pinyin: Guǎngdōng WūLóng
-閩南烏龍:
+- zh: 閩南烏龍
   pinyin: MǐnNán WūLóng
-紅碎茶:
+- zh: 紅碎茶
   pinyin: Hóng Suì Chá
-臺灣烏龍:
+- zh: 臺灣烏龍
   pinyin: TáiWān WūLóng
-閩北烏龍:
+- zh: 閩北烏龍
   pinyin: MǐnBěi WūLóng
-小種紅茶:
+- zh: 小種紅茶
   pinyin: XiǎoZhǒng HóngChá
-工夫紅茶:
+- zh: 工夫紅茶
   pinyin: GōngFū HóngChá
-黃芽茶:
+- zh: 黃芽茶
   pinyin: HuángYáChá
-黃小茶:
+- zh: 黃小茶
   pinyin: HuángXiǎoChá
-黃大茶:
+- zh: 黃大茶
   pinyin: HuángDàChá
-炒青绿茶:
+- zh: 炒青绿茶
   pinyin: Chǎo Qīng LǜChá
-烘青绿茶:
+- zh: 烘青绿茶
   pinyin: Hōng Qīng Lǜchá
