--- a/data/yaml/picking.yaml
+++ b/data/yaml/picking.yaml
@@ -1,38 +1,38 @@
-一芽:
+- zh: 一芽
   pinyin: YīYá
   fr: un bourgeon
-一二葉:
+- zh: 一二葉
   pinyin: Yi Èr Yè
   fr: une ou deux feuilles
-嫩芽:
+- zh: 嫩芽
   pinyin: Nèn Yá
-一芽 一葉:
+- zh: 一芽 一葉
   pinyin: YīYá YīYè
   fr: un bourgeon et une feuille
-一芽 二葉:
+- zh: 一芽 二葉
   pinyin: YīYá ÈrYè
   fr: un bourgeon et deux feuilles
-一芽 一二葉:
+- zh: 一芽 一二葉
   pinyin: Yī Yá YīÈr Yè
   fr: un bourgeon, deux feuilles
-一芽三葉:
+- zh: 一芽三葉
   pinyin: YīYá SānYè
   fr: un bourgeon et trois feuilles
-一芽 一二葉嫩芽:
+- zh: 一芽 一二葉嫩芽
   pinyin: Yī yá yī'èr yè nèn yá
   fr: un bourgeon et une ou deux feuilles
-一芽 二三葉:
+- zh: 一芽 二三葉
   pinyin: YīYá ÈrSānYè
   fr: un bourgeon et deux ou trois feuilles
-一芽 三四葉:
+- zh: 一芽 三四葉
   pinyin: YīYá SānSìYè
   fr: un bourgeon et trois ou quatre feuilles
-三葉:
+- zh: 三葉
   pinyin: Sān Yè
   fr: trois feuilles
-芽葉:
+- zh: 芽葉
   pinyin: Yá Yè
   fr: un bourgeon et feuilles très jeunes
-單壯葉:
+- zh: 單壯葉
   pinyin: Dān Zhuàng Yè
   fr: feuille robuste
