--- a/data/yaml/towns.yaml
+++ b/data/yaml/towns.yaml
@@ -1,12 +1,12 @@
-木柵:
+- zh: 木柵
   pinyin: MùShān
-安溪:
+- zh: 安溪
   pinyin: ĀnXī
-文山區:
+- zh: 文山區
   pinyin: WénShān Qū
-武夷山市:
+- zh: 武夷山市
   pinyin: WǔYíShān Shì
-武夷市:
+- zh: 武夷市
   pinyin: WǔYí Shì
-潮州市:
+- zh: 潮州市
   pinyin: CháoZhōu Shì
