--- a/data/yaml/cultivars.yaml
+++ b/data/yaml/cultivars.yaml
@@ -1,52 +1,52 @@
-鐵觀音:
+- zh: 鐵觀音
   pinyin: TiěGuānYīn
-鳳凰水仙:
+- zh: 鳳凰水仙
   pinyin: FèngHuáng ShuǐXiān
-青心烏龍:
+- zh: 青心烏龍
   pinyin: QīngXīn WūLóng
-桂青:
+- zh: 桂青
   pinyin: Guì Qīng
-景谷大白茶:
+- zh: 景谷大白茶
   pinyin: JǐngGǔ Dà BáiChá
-雲南大白茶:
+- zh: 雲南大白茶
   pinyin: Yúnnán Dà BáiChá
-福鼎大毫茶:
+- zh: 福鼎大毫茶
   pinyin: Fú Dǐng Dà HáoChá
-政和大白茶:
+- zh: 政和大白茶
   pinyin: ZhèngHé Dà BáiChá
-平陽特皁茶:
+- zh: 平陽特皁茶
   pinyin: PíngYáng Tè ZàoChá
-武夷肉桂:
+- zh: 武夷肉桂
   pinyin: WǔYí RòuGuì
-本山:
+- zh: 本山
   pinyin: BěnShān
-毛蟹:
+- zh: 毛蟹
   pinyin: MáoXiè
-黃旦:
+- zh: 黃旦
   pinyin: Huáng Dàn
-小菜茶羣體種:
+- zh: 小菜茶羣體種
   pinyin: XiǎoCài Chá Qún Tǐ Zhǒng
-祁門種:
+- zh: 祁門種
   pinyin: Qímén Zhǒng
-武夷野生奇種:
+- zh: 武夷野生奇種
   pinyin: WǔYí YěShēng Qí Zhǒng
-雲南大葉種拼配:
+- zh: 雲南大葉種拼配
   pinyin: YúnNán DàYè Zhòng Pīn Pèi
-福安大白茶:
+- zh: 福安大白茶
   pinyin: FúĀn Dà BáiChá
-其他拼配:
+- zh: 其他拼配
   pinyin: QíTā Pīn Pèi
-奇丹:
+- zh: 奇丹
   pinyin: Qí Dān
-白毛猴:
+- zh: 白毛猴
   pinyin: Bái Máo Hóu
-青心大某:
+- zh: 青心大某
   pinyin: Qīng Xīn Dà Mǒu
-金萱:
+- zh: 金萱
   pinyin: Jīn Xuān
-硬枝紅心烏龍:
+- zh: 硬枝紅心烏龍
   pinyin: Yìng Zhī HóngXīn WūLóng
-四季春:
+- zh: 四季春
   pinyin: SìJìChūn
-翠玉:
+- zh: 翠玉
   pinyin: CuìYù
