--- a/data/json/teas.json
+++ b/data/json/teas.json
@@ -5,13 +5,15 @@
     "family": "黃小茶",
     "province": "中國浙江",
     "town": [
-      "平陽， 泰順， 瑞安"
+      "平陽",
+      "泰順",
+      "瑞安"
     ],
     "elevation": [
       300,
       1200
     ],
-    "cultivar": "平陽特皁茶",
+    "cultivar": "平陽特色羣體品種",
     "picking": [
       "一芽 一葉",
       "一芽 二葉"
@@ -28,16 +30,54 @@
           80,
           85
         ],
-        "quantity": "1:50"
+        "quantity": "1:50",
+        "duration": [
+          90,
+          120,
+          180
+        ],
+        "times": [
+          2,
+          3
+        ]
+      },
+      {
+        "type": "蓋碗泡法",
+        "temperature": [
+          85,
+          90
+        ],
+        "quantity": "1:30",
+        "duration": [
+          30,
+          60,
+          120
+        ],
+        "times": [
+          3,
+          4
+        ]
       }
-    ]
+    ],
+    "pinyin": "PíngYáng HuángTāng"
   },
   {
     "zh": "北港毛尖",
     "type": "黃茶",
-    "picking": "一芽 二葉",
-    "province": "中國湖南",
     "family": "黃小茶",
+    "province": "中國湖南",
+    "town": "岳陽",
+    "elevation": null,
+    "cultivar": "當地特色羣體品種",
+    "picking": [
+      "一芽 一葉",
+      "一芽 二葉"
+    ],
+    "harvest": "春季",
+    "fermentation": [
+      10,
+      20
+    ],
     "brewing": [
       {
         "type": "茶杯泡法",
@@ -45,16 +85,57 @@
           80,
           85
         ],
-        "quantity": "1:50"
+        "quantity": "1:50",
+        "duration": [
+          90,
+          120,
+          180
+        ],
+        "times": [
+          2,
+          3
+        ]
+      },
+      {
+        "type": "蓋碗泡法",
+        "temperature": [
+          85,
+          90
+        ],
+        "quantity": "1:30",
+        "duration": [
+          30,
+          60,
+          120
+        ],
+        "times": [
+          3,
+          4
+        ]
       }
-    ]
+    ],
+    "pinyin": "BěiGǎng MáoJiān"
   },
   {
     "zh": "溈山毛尖",
     "type": "黃茶",
-    "picking": "一芽 二葉",
-    "province": "中國湖南",
     "family": "黃小茶",
+    "province": "中國湖南",
+    "town": "寧鄉縣",
+    "elevation": [
+      400,
+      900
+    ],
+    "cultivar": "當地特色羣體品種",
+    "picking": [
+      "一芽 一葉",
+      "一芽 二三葉"
+    ],
+    "harvest": "春季",
+    "fermentation": [
+      10,
+      20
+    ],
     "brewing": [
       {
         "type": "茶杯泡法",
@@ -62,71 +143,189 @@
           80,
           85
         ],
-        "quantity": "1:50"
+        "quantity": "1:50",
+        "duration": [
+          90,
+          120,
+          180
+        ],
+        "times": [
+          2,
+          3
+        ]
+      },
+      {
+        "type": "蓋碗泡法",
+        "temperature": [
+          85,
+          90
+        ],
+        "quantity": "1:30",
+        "duration": [
+          30,
+          60,
+          120
+        ],
+        "times": [
+          3,
+          4
+        ]
       }
-    ]
+    ],
+    "pinyin": "WéiShān MáoJiān"
   },
   {
     "zh": "霍山黃芽",
     "type": "黃茶",
-    "picking": [
-      "一芽",
-      "一芽 一葉"
-    ],
-    "province": "中國安徽",
     "family": "黃芽茶",
+    "province": "中國安徽",
+    "town": "霍山",
+    "elevation": [
+      300,
+      700
+    ],
+    "cultivar": "霍山金雞種",
+    "picking": [
+      "一芽 一葉",
+      "一芽 二葉"
+    ],
+    "harvest": "春季",
+    "fermentation": 10,
     "image": true,
     "brewing": [
       {
         "type": "茶杯泡法",
-        "temperature": 75,
-        "quantity": "1:50"
+        "temperature": [
+          75,
+          80
+        ],
+        "quantity": "1:50",
+        "duration": [
+          90,
+          120,
+          180
+        ],
+        "times": [
+          2,
+          3
+        ]
+      },
+      {
+        "type": "蓋碗泡法",
+        "temperature": [
+          80,
+          85
+        ],
+        "quantity": "1:30",
+        "duration": [
+          30,
+          60,
+          120
+        ],
+        "times": [
+          3,
+          4
+        ]
       }
-    ]
+    ],
+    "pinyin": "HuòShān HuángYá"
   },
   {
     "zh": "君山銀針",
     "type": "黃茶",
     "family": "黃芽茶",
     "province": "中國湖南",
-    "picking": [
-      "一芽 一葉",
-      "一芽 二葉"
+    "town": "岳陽洞庭湖君山",
+    "elevation": [
+      50,
+      63
+    ],
+    "cultivar": "當地品種",
+    "picking": "芽頭",
+    "harvest": "春季",
+    "fermentation": [
+      10,
+      20
     ],
     "brewing": [
       {
         "type": "茶杯泡法",
         "temperature": [
-          70,
-          75
+          75,
+          80
         ],
-        "quantity": "1:50"
+        "quantity": "1:50",
+        "duration": [
+          90,
+          120,
+          180
+        ],
+        "times": [
+          2,
+          3
+        ]
       }
-    ]
+    ],
+    "pinyin": "JūnShān YínZhēn"
   },
   {
     "zh": "蒙頂黃芽",
     "type": "黃茶",
     "family": "黃芽茶",
     "province": "中國四川",
+    "town": "雅安蒙山",
+    "elevation": [
+      1000,
+      1400
+    ],
+    "cultivar": "當地品種",
     "picking": [
-      "一芽 一葉",
-      "一芽 二葉"
+      "芽，芽頭"
+    ],
+    "harvest": "春季",
+    "fermentation": [
+      10,
+      20
     ],
     "brewing": [
       {
         "type": "茶杯泡法",
-        "temperature": 75,
-        "quantity": "1:50"
+        "temperature": [
+          75,
+          80
+        ],
+        "quantity": "1:50",
+        "duration": [
+          90,
+          120,
+          180
+        ],
+        "times": [
+          2,
+          3
+        ]
       }
-    ]
+    ],
+    "pinyin": "MéngDǐng HuángYá"
   },
   {
     "zh": "廣東大葉青",
     "type": "黃茶",
-    "picking": "一芽三葉",
-    "province": "中國廣東",
     "family": "黃大茶",
+    "province": "中國廣東",
+    "town": [
+      "韶關",
+      "肇慶",
+      "湛江"
+    ],
+    "elevation": null,
+    "cultivar": "雲南大葉種",
+    "picking": "一芽 二三葉",
+    "harvest": "春季",
+    "fermentation": [
+      10,
+      20
+    ],
     "brewing": [
       {
         "type": "茶杯泡法",
@@ -134,16 +333,56 @@
           85,
           90
         ],
-        "quantity": "1:50"
+        "quantity": "1:50",
+        "duration": [
+          90,
+          120,
+          180
+        ],
+        "times": [
+          2,
+          3
+        ]
+      },
+      {
+        "type": "蓋碗泡法",
+        "temperature": 90,
+        "quantity": "1:30",
+        "duration": [
+          30,
+          60,
+          120
+        ],
+        "times": [
+          3,
+          4
+        ]
       }
-    ]
+    ],
+    "pinyin": "GuǎngDōng DàyèQīng"
   },
   {
     "zh": "霍山黃大茶",
     "type": "黃茶",
-    "picking": "一芽三葉",
-    "province": "中國安徽",
     "family": "黃大茶",
+    "province": "中國安徽",
+    "town": [
+      "霍山",
+      "金寨",
+      "大安",
+      "岳西"
+    ],
+    "elevation": 400,
+    "cultivar": "當地品種",
+    "picking": [
+      "一芽 二三葉",
+      "一芽四五葉"
+    ],
+    "harvest": "春季",
+    "fermentation": [
+      10,
+      20
+    ],
     "image": true,
     "brewing": [
       {
@@ -152,9 +391,33 @@
           85,
           90
         ],
-        "quantity": "1:50"
+        "quantity": "1:50",
+        "duration": [
+          90,
+          120,
+          180
+        ],
+        "times": [
+          2,
+          3
+        ]
+      },
+      {
+        "type": "蓋碗泡法",
+        "temperature": 90,
+        "quantity": "1:30",
+        "duration": [
+          30,
+          60,
+          120
+        ],
+        "times": [
+          3,
+          4
+        ]
       }
-    ]
+    ],
+    "pinyin": "HuòShān HuángDàChá"
   },
   {
     "zh": "碧螺春",
@@ -181,7 +444,8 @@
           5
         ]
       }
-    ]
+    ],
+    "pinyin": "BìLuóChūn"
   },
   {
     "zh": "湄潭翠芽",
@@ -209,7 +473,8 @@
         "temperature": 80,
         "quantity": "1:50"
       }
-    ]
+    ],
+    "pinyin": "MéiTánCuìYá"
   },
   {
     "zh": "黄山毛峰",
@@ -245,7 +510,8 @@
         ],
         "quantity": "1:50"
       }
-    ]
+    ],
+    "pinyin": "HuángShān MáoFēng"
   },
   {
     "zh": "龍井茶",
@@ -275,7 +541,8 @@
         "temperature": 85,
         "quantity": "1:50"
       }
-    ]
+    ],
+    "pinyin": "LóngJǐng"
   },
   {
     "zh": "都勻毛尖",
@@ -303,7 +570,8 @@
         "temperature": 80,
         "quantity": "1:50"
       }
-    ]
+    ],
+    "pinyin": "DūYún MáoJiān"
   },
   {
     "zh": "信阳毛尖",
@@ -332,7 +600,8 @@
         "temperature": 80,
         "quantity": "1:50"
       }
-    ]
+    ],
+    "pinyin": "XìnYáng MáoJiān"
   },
   {
     "zh": "竹葉青",
@@ -361,7 +630,8 @@
         "temperature": 85,
         "quantity": "1:50"
       }
-    ]
+    ],
+    "pinyin": "ZhúYèGīng"
   },
   {
     "zh": "頂谷大方",
@@ -391,7 +661,8 @@
         "temperature": 80,
         "quantity": "1:50"
       }
-    ]
+    ],
+    "pinyin": "DǐngGǔDàFāng"
   },
   {
     "zh": "太平猴魁",
@@ -431,7 +702,8 @@
         ],
         "quantity": "1:50"
       }
-    ]
+    ],
+    "pinyin": "TàiPíng HóuKuí"
   },
   {
     "zh": "綠寶石",
@@ -468,7 +740,8 @@
         ],
         "quantity": "1:50"
       }
-    ]
+    ],
+    "pinyin": "LǜBǎoShí"
   },
   {
     "zh": "珠茶",
@@ -500,7 +773,8 @@
         "temperature": 90,
         "quantity": "1:50"
       }
-    ]
+    ],
+    "pinyin": "ZhūChá"
   },
   {
     "zh": "六安瓜片",
@@ -530,7 +804,8 @@
         "temperature": 85,
         "quantity": "1:50"
       }
-    ]
+    ],
+    "pinyin": "LiùĀn GuāPiàn"
   },
   {
     "zh": "四季春",
@@ -582,7 +857,8 @@
           6
         ]
       }
-    ]
+    ],
+    "pinyin": "SìJìChūn"
   },
   {
     "zh": "金萱",
@@ -635,7 +911,8 @@
           6
         ]
       }
-    ]
+    ],
+    "pinyin": "Jīn Xuān"
   },
   {
     "zh": "文山包種",
@@ -698,7 +975,8 @@
           6
         ]
       }
-    ]
+    ],
+    "pinyin": "WénShān BāoZhǒng"
   },
   {
     "zh": "高山茶",
@@ -765,7 +1043,8 @@
           8
         ]
       }
-    ]
+    ],
+    "pinyin": "GāoShānChá"
   },
   {
     "zh": "木柵鐵觀音",
@@ -834,7 +1113,8 @@
           8
         ]
       }
-    ]
+    ],
+    "pinyin": "MùShān TiěGuānYīn"
   },
   {
     "zh": "凍頂烏龍",
@@ -902,7 +1182,8 @@
           8
         ]
       }
-    ]
+    ],
+    "pinyin": "DòngDǐng WūLóng"
   },
   {
     "zh": "東方美人",
@@ -919,7 +1200,9 @@
       500
     ],
     "cultivar": [
-      "青心大某，青心乌龙，白毛猴"
+      "青心大某",
+      "青心乌龙",
+      "白毛猴"
     ],
     "picking": "一芽 一葉",
     "harvest": "夏季",
@@ -973,7 +1256,8 @@
           8
         ]
       }
-    ]
+    ],
+    "pinyin": "DōngFāngMěiRén"
   },
   {
     "zh": "大紅袍",
@@ -1015,7 +1299,8 @@
           20
         ]
       }
-    ]
+    ],
+    "pinyin": "DàHóngPáo"
   },
   {
     "zh": "武夷水仙",
@@ -1057,7 +1342,8 @@
           20
         ]
       }
-    ]
+    ],
+    "pinyin": "WǔYí ShuǐXiān"
   },
   {
     "zh": "肉桂",
@@ -1099,7 +1385,8 @@
           20
         ]
       }
-    ]
+    ],
+    "pinyin": "RòuGuì"
   },
   {
     "zh": "鳳凰單叢",
@@ -1159,7 +1446,8 @@
           20
         ]
       }
-    ]
+    ],
+    "pinyin": "FèngHuáng DānCóng"
   },
   {
     "zh": "安溪鐵觀音",
@@ -1230,7 +1518,8 @@
           8
         ]
       }
-    ]
+    ],
+    "pinyin": "AnXī TiěGuānYīn"
   },
   {
     "zh": "本山茶",
@@ -1296,7 +1585,8 @@
           6
         ]
       }
-    ]
+    ],
+    "pinyin": "BěnShānChá"
   },
   {
     "zh": "毛蟹茶",
@@ -1363,7 +1653,8 @@
           6
         ]
       }
-    ]
+    ],
+    "pinyin": "MáoXièChá"
   },
   {
     "zh": "黃金桂",
@@ -1430,7 +1721,8 @@
           6
         ]
       }
-    ]
+    ],
+    "pinyin": "HuángJīnGuì"
   },
   {
     "zh": "白毫銀針",
@@ -1444,7 +1736,8 @@
       800
     ],
     "cultivar": [
-      "福鼎大白茶， 政和大白茶"
+      "福鼎大白茶",
+      "政和大白茶"
     ],
     "picking": "嫩芽",
     "harvest": "春季",
@@ -1485,21 +1778,26 @@
           3
         ]
       }
-    ]
+    ],
+    "pinyin": "BáiHáo YínZhēn"
   },
   {
     "zh": "白牡丹",
     "type": "白茶",
     "province": "中國福建",
     "town": [
-      "政和， 福鼎， 建陽， 松溪"
+      "政和",
+      "福鼎",
+      "建陽",
+      "松溪"
     ],
     "elevation": [
       500,
       800
     ],
     "cultivar": [
-      "福鼎大白茶， 福鼎大毫茶"
+      "福鼎大白茶",
+      "福鼎大毫茶"
     ],
     "picking": "一芽 一二葉",
     "harvest": "春季",
@@ -1540,7 +1838,8 @@
           3
         ]
       }
-    ]
+    ],
+    "pinyin": "BáiMǔDān"
   },
   {
     "zh": "月光白",
@@ -1592,7 +1891,8 @@
           10
         ]
       }
-    ]
+    ],
+    "pinyin": "YuèGuāngBái"
   },
   {
     "zh": "壽眉",
@@ -1609,7 +1909,8 @@
       800
     ],
     "cultivar": [
-      "福鼎大白茶， 福鼎大毫茶"
+      "福鼎大白茶",
+      "福鼎大毫茶"
     ],
     "picking": "一芽 二三葉",
     "harvest": [
@@ -1651,7 +1952,8 @@
           3
         ]
       }
-    ]
+    ],
+    "pinyin": "Shòu Méi"
   },
   {
     "zh": "雲南白茶磚",
@@ -1683,7 +1985,8 @@
           8
         ]
       }
-    ]
+    ],
+    "pinyin": "YúnNán BáiChá Zhuān"
   },
   {
     "zh": "正山小種",
@@ -1721,7 +2024,8 @@
           6
         ]
       }
-    ]
+    ],
+    "pinyin": "ZhèngShānXiǎoZhǒng"
   },
   {
     "zh": "祁門紅茶",
@@ -1779,7 +2083,8 @@
           2
         ]
       }
-    ]
+    ],
+    "pinyin": "QíMén HóngChá"
   },
   {
     "zh": "坦洋",
@@ -1839,7 +2144,8 @@
           2
         ]
       }
-    ]
+    ],
+    "pinyin": "Tǎn Yáng"
   },
   {
     "zh": "金駿眉",
@@ -1884,7 +2190,8 @@
           12
         ]
       }
-    ]
+    ],
+    "pinyin": "JīnJùnMéi"
   },
   {
     "zh": "紅碎茶",
@@ -1892,7 +2199,9 @@
     "family": "紅碎茶",
     "province": [
       "中國雲南",
-      "廣東， 海南， 廣西"
+      "廣東",
+      "海南",
+      "廣西"
     ],
     "brewing": [
       {
@@ -1920,7 +2229,8 @@
         ],
         "times": 2
       }
-    ]
+    ],
+    "pinyin": "Hóng Suì Chá"
   },
   {
     "zh": "滇紅",
@@ -1967,7 +2277,8 @@
         ],
         "times": 10
       }
-    ]
+    ],
+    "pinyin": "Diān Hóng"
   },
   {
     "zh": "六堡黑茶",
@@ -1995,6 +2306,7 @@
         "duration": 300,
         "times": 1
       }
-    ]
+    ],
+    "pinyin": "LiùBǎoHēiChá"
   }
 ]
