--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --experimental-modules --no-warnings index.mjs",
-    "yaml2json": "node --experimental-modules --no-warnings convertYamlToJson.mjs"
+    "yaml2json": "node --experimental-modules --no-warnings ./scripts/convertYamlToJson.mjs"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
