--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "babel-preset-es2015": "^6.24.1",
+        "cors": "^2.8.5",
         "express": "^4.17.1"
     },
     "devDependencies": {
