--- a/data/yaml/teas.yaml
+++ b/data/yaml/teas.yaml
@@ -1080,7 +1080,7 @@
     - 20
 
 - zh: 安溪鐵觀音
-  pinyin: AnXī TiěGuānYīn
+  pinyin: ĀnXī TiěGuānYīn
   type: 青茶
   family: 閩南烏龍
   harvest:
@@ -1703,9 +1703,8 @@
     - 30
     times: 10
 
-
 - zh: 廣西六堡茶
-  pinyin: GuǎngXī LiùBǎo Chá
+  pinyin: GuǎngXī LiùBǎoChá
   type: 黑茶
   province: 中國廣西
   town: 蒼梧縣
@@ -1729,6 +1728,7 @@
     times: 1
 
 - zh: 湖南安化黑茶
+  pinyin: Húnán Ān Huà HēiChá
   type: 黑茶
   province: 中國湖南
   town: 益陽市安化縣
@@ -1758,6 +1758,7 @@
     times: 1
 
 - zh: 湖北青磚
+  pinyin: HúBěi QīngZhuān
   type: 黑茶
   province: 中國湖北
   town: 
@@ -1769,8 +1770,7 @@
   elevation:
   - 100
   - 800
-  cultivar: 
-  - 當地品種
+  cultivar: 當地品種
   harvest:
   - 春季
   - 夏季
