--- a/data/yaml/cultivars.yaml
+++ b/data/yaml/cultivars.yaml
@@ -50,3 +50,11 @@
   pinyin: SìJìChūn
 - zh: 翠玉
   pinyin: CuìYù
+- zh: 平陽特色羣體品種
+  pinyin: PíngYáng TèSè Qún Tǐ PǐnZhǒng
+- zh: 霍山金雞種
+  pinyin: Huòshān jīnjī zhǒng
+- zh: 當地品種
+  pinyin: DāngDì PǐnZhǒng
+- zh: 雲南大葉種
+  pinyin: YúnNán DàYè Zhòng
