rationnalisation picking thés verts et jaunes / pinyin

--- a/data/yaml/teas.yaml
+++ b/data/yaml/teas.yaml
@@ -138,8 +138,7 @@
   town: 霍山
   cultivar: 霍山金雞種
   picking:
-  - 一芽 一葉
-  - 一芽 二葉
+  - 一芽 一二葉
   elevation:
   - 300
   - 700
@@ -178,7 +177,7 @@
   province: 中國湖南
   town: 岳陽洞庭湖君山
   cultivar: 當地品種
-  picking: 芽頭
+  picking: 芽葉
   elevation:
   - 50
   - 63
@@ -208,7 +207,7 @@
   town: 雅安蒙山
   cultivar: 當地品種
   picking:
-  - 芽，芽頭
+  - 單芽，芽葉
   elevation:
   - 1000
   - 1400
@@ -518,8 +517,7 @@
   type: 綠茶
   province: 中國貴州
   picking:
-  - 一芽 二葉
-  - 一芽三葉
+  - 一芽 二三葉
   brewing:
   - type: 蓋碗泡法
     temperature:
