ajout Qīng xīn wū lóng, jīn xuān, cuìyù ensemble voir si il reconnait le pinyin

--- a/data/yaml/cultivars.yaml
+++ b/data/yaml/cultivars.yaml
@@ -58,3 +58,6 @@
   pinyin: DāngDì PǐnZhǒng
 - zh: 雲南大葉種
   pinyin: YúnNán DàYè Zhòng
+- zh: 青心烏龍, 金萱, 翠玉
+  pinyin: Qīngxīn wūlóng, jīnxuān, cuìyù
+  
