--- a/data/yaml/teas.yaml
+++ b/data/yaml/teas.yaml
@@ -403,6 +403,7 @@
 - zh: 都勻毛尖
   pinyin: DūYún MáoJiān
   type: 綠茶
+  family: 炒青綠茶
   province: 中國貴州
   picking: 一芽 一葉
   brewing:
@@ -424,6 +425,7 @@
 - zh: 信阳毛尖
   pinyin: XìnYáng MáoJiān
   type: 綠茶
+  family: 炒青綠茶
   province: 中國河南
   picking: 一芽 一葉
   brewing:
@@ -515,6 +517,7 @@
 - zh: 綠寶石
   pinyin: LǜBǎoShí
   type: 綠茶
+  family: 炒青綠茶
   province: 中國貴州
   picking:
   - 一芽 二三葉
