--- a/data/yaml/families.yaml
+++ b/data/yaml/families.yaml
@@ -1,17 +1,22 @@
 - zh: 廣東烏龍
   pinyin: Guǎngdōng WūLóng
+  fr: Wulong de Canton
 - zh: 閩南烏龍
   pinyin: MǐnNán WūLóng
+  fr: sud du FuJian
 - zh: 紅碎茶
   pinyin: Hóng Suì Chá
 - zh: 臺灣烏龍
   pinyin: TáiWān WūLóng
+  fr: Wulong de Taiwan
 - zh: 閩北烏龍
   pinyin: MǐnBěi WūLóng
+  fr: Nord du FuJian
 - zh: 小種紅茶
   pinyin: XiǎoZhǒng HóngChá
 - zh: 工夫紅茶
   pinyin: GōngFū HóngChá
+  fr: thé rouge Kung Fu
 - zh: 黃芽茶
   pinyin: HuángYáChá
 - zh: 黃小茶
@@ -20,5 +25,7 @@
   pinyin: HuángDàChá
 - zh: 炒青绿茶
   pinyin: Chǎo Qīng LǜChá
+  fr: Séchage au wok
 - zh: 烘青绿茶
   pinyin: Hōng Qīng Lǜchá
+  fr: Séchage au four
