--- a/data/yaml/towns.yaml
+++ b/data/yaml/towns.yaml
@@ -10,3 +10,10 @@
   pinyin: WǔYí Shì
 - zh: 潮州市
   pinyin: CháoZhōu Shì
+- zh: 勐腊
+  pinyin: Měnglà
+- zh: 勐海
+  pinyin: Měnghǎi
+- zh: 臨滄
+  pinyin: Líncāng
+  
