--- a/data/yaml/cultivars.yaml
+++ b/data/yaml/cultivars.yaml
@@ -58,6 +58,35 @@
   pinyin: DāngDì PǐnZhǒng
 - zh: 雲南大葉種
   pinyin: YúnNán DàYè Zhòng
-- zh: 青心烏龍, 金萱, 翠玉
-  pinyin: Qīngxīn wūlóng, jīnxuān, cuìyù
-  
+- zh: 金萱
+  pinyin: JīnXuān
+- zh: 東西山群體種
+  pinyin: DōngXī Shān QúnTǐ Zhǒng
+- zh: 當地中小葉品種
+  pinyin: DāngDì ZhōngXiǎo Yè PǐnZhǒng
+- zh: 祁門楮葉種
+  pinyin: QíMén Chǔ Yè Zhòng
+- zh: 黃山大葉種
+  pinyin: HuángShān DàYè Zhòng
+- zh: 鳳岡鋅硒茶毛茶
+  pinyin: FèngGāng Xīn Xī Chá Máochá
+- zh: 都勻本地台茶種
+  pinyin: Dū Yún BěnDì Tái Chá Zhǒng
+- zh: 福鼎大白茶中小葉種
+  pinyin: Fú Dǐng Dà BáiChá Zhòng Xiǎo Yè Zhòng
+- zh: 信陽本地品種
+  pinyin: XìnYáng Běndì PǐnZhǒng
+- zh: 福鼎大白茶
+  pinyin: Fú Dǐng Dà BáiChá
+- zh: 野生茶
+  pinyin: YěShēng Chá
+- zh: 龍井43
+  pinyin: LóngJǐng 43
+- zh: 平陽特皂
+  pinyin: PíngYáng Tè Zào
+- zh: 浙農117
+  pinyin: ZhèNóng 117
+- zh: 浙農139
+  pinyin: ZhèNóng 139
+- zh: 烏牛早
+  pinyin: Wū Niú Zǎo
