--- a/data/yaml/teas.yaml
+++ b/data/yaml/teas.yaml
@@ -16,7 +16,7 @@
   elevation:
   - 300
   - 1200
-  fermentation:
+  oxidation:
   - 10
   - 20
   brewing:
@@ -57,7 +57,7 @@
   - 一芽 一葉
   - 一芽 二葉
   elevation: 
-  fermentation:
+  oxidation:
   - 10
   - 20
   brewing:
@@ -100,7 +100,7 @@
   elevation:
   - 400
   - 900
-  fermentation:
+  oxidation:
   - 10
   - 20
   brewing:
@@ -142,7 +142,7 @@
   elevation:
   - 300
   - 700
-  fermentation: 10
+  oxidation: 10
   brewing:
   - type: 茶杯泡法
     temperature:
@@ -181,7 +181,7 @@
   elevation:
   - 50
   - 63
-  fermentation:
+  oxidation:
   - 10
   - 20
   brewing:
@@ -211,7 +211,7 @@
   elevation:
   - 1000
   - 1400
-  fermentation:
+  oxidation:
   - 10
   - 20
   brewing:
@@ -241,7 +241,7 @@
   cultivar: 雲南大葉種
   picking: 一芽 二三葉
   elevation: 
-  fermentation:
+  oxidation:
   - 10
   - 20
   brewing:
@@ -284,7 +284,7 @@
   - 一芽 二三葉
   - 一芽四五葉
   elevation: 400
-  fermentation:
+  oxidation:
   - 10
   - 20
   brewing:
@@ -317,7 +317,7 @@
   family: 炒青绿茶
   province: 中國江蘇
   town: 蘇州市
-  cultivar: 東 西山羣體種
+  cultivar: 東西山羣體種
   picking: 芽葉
   brewing:
   - type: 蓋碗泡法
@@ -340,8 +340,8 @@
   province: 中國貴州
   town: 遵義市
   elevation:
-    - 800
-    - 1300
+  - 800
+  - 1300
   cultivar: 當地中小葉品種
   picking: 芽葉
   brewing:
@@ -366,11 +366,11 @@
   province: 中國安徽
   town: 黃山區
   elevation: 
-    - 400
-    - 800
-  culivar: 
-    - 黃山大葉種
-    - 祁門楮葉種
+  - 400
+  - 800
+  cultivar: 
+  - 黃山大葉種
+  - 祁門楮葉種
   picking: 一芽 一葉
   brewing:
   - type: 蓋碗泡法
@@ -399,11 +399,11 @@
   province: 中國浙江
   town: 杭州市西湖區龍井村
   cultivar: 
-    - 龍井43
-    - 平陽特皁
-    - 浙農117
-    - 浙農139
-    - 烏牛早
+  - 龍井43
+  - 平陽特皁
+  - 浙農117
+  - 浙農139
+  - 烏牛早
   picking: 一芽 一葉
   brewing:
   - type: 蓋碗泡法
@@ -429,8 +429,8 @@
   town: 都勻市
   elevation: 1000
   cultivar:
-    - 都勻本地臺茶種
-    - 福鼎大白茶中小葉種
+  - 都勻本地臺茶種
+  - 福鼎大白茶中小葉種
   picking: 一芽 一葉
   brewing:
   - type: 蓋碗泡法
@@ -455,12 +455,12 @@
   province: 中國河南
   town: 信陽市
   elevation: 
-    - 300
-    - 800
+  - 300
+  - 800
   cultivar:
-    - 信陽本地品種
-    - 福鼎大白茶
-    - 野生茶
+  - 信陽本地品種
+  - 福鼎大白茶
+  - 野生茶
   picking: 一芽 一葉
   brewing:
   - type: 蓋碗泡法
@@ -637,7 +637,7 @@
   province: 臺灣
   cultivar: 四季春
   picking: 一芽 二葉
-  fermentation:
+  oxidation:
   - 20
   - 25
   brewing:
@@ -678,7 +678,7 @@
   province: 臺灣
   cultivar: 金萱
   picking: 一芽 二葉
-  fermentation:
+  oxidation:
   - 20
   - 25
   brewing:
@@ -728,7 +728,7 @@
   elevation:
   - 400
   - 600
-  fermentation:
+  oxidation:
   - 12
   - 15
   brewing:
@@ -774,7 +774,7 @@
   - 翠玉
   picking: 一芽 二葉
   elevation: 1000
-  fermentation:
+  oxidation:
   - 15
   - 20
   brewing:
@@ -831,7 +831,7 @@
   elevation:
   - 200
   - 500
-  fermentation: 40
+  oxidation: 40
   brewing:
   - type: 蓋碗泡法
     temperature:
@@ -883,7 +883,7 @@
   elevation:
   - 600
   - 800
-  fermentation:
+  oxidation:
   - 25
   - 30
   brewing:
@@ -939,7 +939,7 @@
   elevation:
   - 300
   - 500
-  fermentation:
+  oxidation:
   - 60
   - 75
   brewing:
@@ -992,7 +992,7 @@
   elevation:
   - 200
   - 300
-  fermentation: 70
+  oxidation: 70
   brewing:
   - type: 蓋碗泡法
     temperature:
@@ -1023,7 +1023,7 @@
   elevation:
   - 200
   - 300
-  fermentation:
+  oxidation:
   - 35
   - 45
   brewing:
@@ -1056,7 +1056,7 @@
   elevation:
   - 200
   - 300
-  fermentation:
+  oxidation:
   - 35
   - 45
   brewing:
@@ -1088,7 +1088,7 @@
   elevation:
   - 500
   - 1100
-  fermentation:
+  oxidation:
   - 70
   - 80
   brewing:
@@ -1139,7 +1139,7 @@
   elevation:
   - 300
   - 1600
-  fermentation:
+  oxidation:
   - 20
   - 50
   brewing:
@@ -1193,7 +1193,7 @@
   elevation:
   - 300
   - 1600
-  fermentation:
+  oxidation:
   - 20
   - 50
   brewing:
@@ -1244,7 +1244,7 @@
   elevation:
   - 300
   - 1600
-  fermentation:
+  oxidation:
   - 20
   - 50
   brewing:
@@ -1295,7 +1295,7 @@
   elevation:
   - 300
   - 1600
-  fermentation:
+  oxidation:
   - 20
   - 50
   brewing:
@@ -1345,7 +1345,7 @@
   elevation:
   - 500
   - 800
-  fermentation:
+  oxidation:
   - 5
   - 10
   brewing:
@@ -1391,7 +1391,7 @@
   elevation:
   - 500
   - 800
-  fermentation:
+  oxidation:
   - 5
   - 10
   brewing:
@@ -1431,7 +1431,7 @@
   cultivar: 景谷大白茶
   picking: 一芽 二葉
   elevation: 1600
-  fermentation:
+  oxidation:
   - 5
   - 10
   brewing:
@@ -1480,7 +1480,7 @@
   elevation:
   - 500
   - 800
-  fermentation:
+  oxidation:
   - 5
   - 10
   brewing:
@@ -1512,7 +1512,7 @@
   province: 中國雲南
   cultivar: 雲南大白茶
   picking: 一芽 二三葉
-  fermentation:
+  oxidation:
   - 5
   - 10
   brewing:
@@ -1542,7 +1542,7 @@
   cultivar: 小菜茶羣體種
   picking: 一芽 二三葉
   elevation: 1100
-  fermentation:
+  oxidation:
   - 80
   - 95
   brewing:
@@ -1574,7 +1574,7 @@
   elevation:
   - 100
   - 350
-  fermentation:
+  oxidation:
   - 80
   - 95
   brewing:
@@ -1619,7 +1619,7 @@
   elevation:
   - 300
   - 1000
-  fermentation:
+  oxidation:
   - 80
   - 95
   brewing:
@@ -1660,7 +1660,7 @@
   elevation:
   - 1000
   - 1200
-  fermentation:
+  oxidation:
   - 80
   - 95
   brewing:
@@ -1728,7 +1728,7 @@
   - 一芽一葉
   - 一芽二三葉
   elevation: 1000
-  fermentation:
+  oxidation:
   - 80
   - 90
   brewing:
@@ -1765,7 +1765,7 @@
   elevation:
   - 1000
   - 1500
-  fermentation: 99
+  oxidation: 99
   brewing:
   - type: 煮泡法
     temperature: 100
@@ -1795,7 +1795,7 @@
   - 春季
   - 夏季
   - 秋季 
-  post-fermentation: true
+  fermentation: true
   brewing:
   - type: 煮泡法
     temperature:
@@ -1825,7 +1825,7 @@
   - 春季
   - 夏季
   - 秋季 
-  post-fermentation: true
+  fermentation: true
   brewing:
   - type: 煮泡法
     temperature:
@@ -1849,7 +1849,7 @@
   cultivar: 0
   picking: 0
   elevation: 0
-  fermentation: 100
+  oxidation: 100
   brewing:
   - type: 茶壺泡法
     temperature:
