--- a/data/yaml/themes.yaml
+++ b/data/yaml/themes.yaml
@@ -8,7 +8,7 @@
   en: types
 - zh: 分類
   pinyin: Fēn Lèi
-  fr: famille
+  fr: familles
   en: families
 - zh: 採摘季節
   pinyin: CǎiZhāi JìJié
@@ -24,7 +24,7 @@
   en: towns
 - zh: 茶樹品種
   pinyin: CháShù PǐnZhǒng
-  fr: cultivar
+  fr: cultivars
   en: cultivars
 - zh: 採摘標準
   pinyin: CǎiZhāi BiāoZhǔn
