--- a/data/yaml/cultivars.yaml
+++ b/data/yaml/cultivars.yaml
@@ -52,6 +52,8 @@
   pinyin: CuìYù
 - zh: 平陽特色羣體品種
   pinyin: PíngYáng TèSè Qún Tǐ PǐnZhǒng
+- zh: 當地特色羣體品種
+  pinyin: DāngDì TèSè Qún Tǐ PǐnZhǒng
 - zh: 霍山金雞種
   pinyin: Huòshān jīnjī zhǒng
 - zh: 當地品種
@@ -70,7 +72,7 @@
   pinyin: HuángShān DàYè Zhòng
 - zh: 鳳岡鋅硒茶毛茶
   pinyin: FèngGāng Xīn Xī Chá Máochá
-- zh: 都勻本地台茶種
+- zh: 都勻本地臺茶種
   pinyin: Dū Yún BěnDì Tái Chá Zhǒng
 - zh: 福鼎大白茶中小葉種
   pinyin: Fú Dǐng Dà BáiChá Zhòng Xiǎo Yè Zhòng
@@ -90,3 +92,13 @@
   pinyin: ZhèNóng 139
 - zh: 烏牛早
   pinyin: Wū Niú Zǎo
+- zh: 柿大茶
+  pinyin: Shì Dà Chá
+- zh: 當地羣體種
+  pinyin: DāngDì Qún Tǐ Zhǒng
+- zh: 雲臺山大葉種
+  pinyin: Yún TáiShān DàYè Zhòng
+- zh: 楮葉齊
+  pinyin: Chǔ Yè Qí
+- zh: 廣西大中葉種
+  pinyin: GuǎngXī Dà ZhōngYè Zhòng
