adds data pinyin

--- a/data/yaml/cultivars.yaml
+++ b/data/yaml/cultivars.yaml
@@ -51,7 +51,7 @@
 - zh: 翠玉
   pinyin: CuìYù
 - zh: 平陽特色羣體品種
-  pinyin: PíngYáng TèSè Qún Tǐ PǐnZhǒng
+  pinyin: PíngYáng TèSè QúnTǐ PǐnZhǒng
 - zh: 當地特色羣體品種
   pinyin: DāngDì TèSè Qún Tǐ PǐnZhǒng
 - zh: 霍山金雞種
@@ -62,7 +62,7 @@
   pinyin: YúnNán DàYè Zhòng
 - zh: 金萱
   pinyin: JīnXuān
-- zh: 東西山群體種
+- zh: 東西山羣體種
   pinyin: DōngXī Shān QúnTǐ Zhǒng
 - zh: 當地中小葉品種
   pinyin: DāngDì ZhōngXiǎo Yè PǐnZhǒng
