--- a/data/yaml/picking.yaml
+++ b/data/yaml/picking.yaml
@@ -1,6 +1,9 @@
 - zh: 一芽
   pinyin: YīYá
   fr: un bourgeon
+- zh: 單芽
+  pinyin: Dān Yá
+  fr: bourgeon simple
 - zh: 一二葉
   pinyin: Yi Èr Yè
   fr: une ou deux feuilles
@@ -15,11 +18,11 @@
 - zh: 一芽 一二葉
   pinyin: Yī Yá YīÈr Yè
   fr: un bourgeon, deux feuilles
-- zh: 一芽三葉
+- zh: 一芽 三葉
   pinyin: YīYá SānYè
   fr: un bourgeon et trois feuilles
 - zh: 一芽 一二葉嫩芽
-  pinyin: Yī yá yī'èr yè nèn yá
+  pinyin: YīYá Yī Èr Yè Nèn Yá
   fr: un bourgeon et une ou deux feuilles
 - zh: 一芽 二三葉
   pinyin: YīYá ÈrSānYè
@@ -27,6 +30,12 @@
 - zh: 一芽 三四葉
   pinyin: YīYá SānSìYè
   fr: un bourgeon et trois ou quatre feuilles
+- zh: 一芽 四五葉
+  pinyin: YīYá SìWǔYè
+  fr: un bourgeon et quatre ou cinq feuilles
+- zh: 一芽 四五葉
+  pinyin: Yī Yá WǔLiù Yè
+  fr: un bourgeon et cinq ou six feuilles
 - zh: 三葉
   pinyin: Sān Yè
   fr: trois feuilles
