--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node --experimental-modules --no-warnings ./src/index.mjs",
-        "yaml2json": "node --experimental-modules --no-warnings ./scripts/yamlToJson.mjs",
+        "yaml2json": "node --experimental-modules --no-warnings ./scripts/yaml2Json.mjs",
         "pinyinTranslation": "node --experimental-modules --no-warnings ./scripts/pinyinTranslation.mjs",
         "orderTeasJsonFields": "node --experimental-modules --no-warnings ./scripts/orderTeasJsonFields.mjs",
         "deploy": "./scripts/deploy.sh"
