--- a/data/yaml/teas.yaml
+++ b/data/yaml/teas.yaml
@@ -318,6 +318,9 @@
   town: 蘇州市
   cultivar: 東西山羣體種
   picking: 芽葉
+  oxidation:
+    - 0
+    - 5
   brewing:
     - type: 蓋碗泡法
       temperature:
@@ -343,6 +346,9 @@
     - 1300
   cultivar: 當地中小葉品種
   picking: 芽葉
+  oxidation:
+    - 0
+    - 5
   brewing:
     - type: 蓋碗泡法
       temperature: 80
@@ -372,6 +378,9 @@
     - 祁門楮葉種
     - 其他外地引進品種
   picking: 一芽 一葉
+  oxidation:
+    - 0
+    - 5
   brewing:
     - type: 蓋碗泡法
       temperature:
@@ -405,6 +414,9 @@
     - 浙農139
     - 烏牛早
   picking: 一芽 一葉
+  oxidation:
+    - 0
+    - 5
   brewing:
     - type: 蓋碗泡法
       temperature: 85
@@ -428,6 +440,9 @@
   province: 中國貴州
   town: 都勻市
   elevation: 1000
+  oxidation:
+    - 0
+    - 5
   cultivar:
     - 都勻本地臺茶種
     - 福鼎大白茶中小葉種
@@ -457,6 +472,9 @@
   elevation:
     - 300
     - 800
+  oxidation:
+    - 0
+    - 5
   cultivar:
     - 信陽本地品種
     - 福鼎大白茶
@@ -485,6 +503,9 @@
   province: 中國四川
   town: 峨眉山
   picking: 一芽 一葉
+  oxidation:
+    - 0
+    - 5
   brewing:
     - type: 蓋碗泡法
       temperature: 85
@@ -509,6 +530,9 @@
   town: 歙縣
   elevation: 1300
   picking: 一芽 二葉
+  oxidation:
+    - 0
+    - 5
   brewing:
     - type: 蓋碗泡法
       temperature: 80
@@ -534,6 +558,9 @@
   elevation:
     - 100
     - 300
+  oxidation:
+    - 0
+    - 5
   cultivar: 柿大茶
   picking: 一芽 二葉
   brewing:
@@ -564,6 +591,9 @@
   cultivar: 鳳岡鋅硒茶毛茶
   picking:
     - 一芽 二三葉
+  oxidation:
+    - 0
+    - 5
   brewing:
     - type: 蓋碗泡法
       temperature:
@@ -590,6 +620,9 @@
   family: 炒青绿茶
   province: 中國浙江
   picking: 一芽 二三葉
+  oxidation:
+    - 0
+    - 5
   brewing:
     - type: 蓋碗泡法
       temperature: 90
@@ -615,6 +648,9 @@
   elevation:
     - 100
     - 300
+  oxidation:
+    - 0
+    - 5
   cultivar:
     - 獨山小葉種
     - 齊山中葉種
