--- a/data/yaml/brews.yaml
+++ b/data/yaml/brews.yaml
@@ -1,15 +1,15 @@
-- zh: 蓋碗泡法
+- ideogram: 蓋碗泡法
   pinyin: GàiWǎn PàoFǎ
   fr: infusion au gaiwan
-- zh: 茶盅泡法
+- ideogram: 茶盅泡法
   pinyin: CháZhōng PàoFǎ
   fr: infusion au zhong
-- zh: 茶壺泡法
+- ideogram: 茶壺泡法
   pinyin: ChaHu PàoFǎ
   fr: infusion en théière
-- zh: 茶杯泡法
+- ideogram: 茶杯泡法
   pinyin: CháBēi PàoFǎ
   fr: infusion en verre
-- zh: 煮泡法
+- ideogram: 煮泡法
   pinyin: Zhu PàoFǎ
   fr: décoction en bouilloire
