--- a/data/yaml/towns.yaml
+++ b/data/yaml/towns.yaml
@@ -1,28 +1,28 @@
-- zh: 木柵
+- ideogram: 木柵
   pinyin: MùShān
-- zh: 安溪
+- ideogram: 安溪
   pinyin: ĀnXī
-- zh: 文山區
+- ideogram: 文山區
   pinyin: WénShān Qū
-- zh: 武夷山市
+- ideogram: 武夷山市
   pinyin: WǔYíShān Shì
-- zh: 武夷市
+- ideogram: 武夷市
   pinyin: WǔYí Shì
-- zh: 潮州市
+- ideogram: 潮州市
   pinyin: CháoZhōu Shì
-- zh: 勐腊
+- ideogram: 勐腊
   pinyin: Měnglà
-- zh: 勐海
+- ideogram: 勐海
   pinyin: Měnghǎi
-- zh: 臨滄
+- ideogram: 臨滄
   pinyin: Líncāng
-- zh: 蒲圻
+- ideogram: 蒲圻
   pinyin: Pú Qí
-- zh: 咸寧
+- ideogram: 咸寧
   pinyin: XiánNíng
-- zh: 通山
+- ideogram: 通山
   pinyin: Tōng Shān
-- zh: 通城
+- ideogram: 通城
   pinyin: Tōng Chéng
-- zh: 崇陽
+- ideogram: 崇陽
   pinyin: Chóng Yáng
