--- a/data/yaml/themes.yaml
+++ b/data/yaml/themes.yaml
@@ -4,8 +4,8 @@
   en: teas
 - ideogram: 六大茶類
   pinyin: Liù Dà Chá Lèi
-  fr: types
-  en: types
+  fr: type
+  en: type
 - ideogram: 分類
   pinyin: Fēn Lèi
   fr: familles
