--- a/scripts/_settings.yaml
+++ b/scripts/_settings.yaml
@@ -31,7 +31,7 @@ yamlFiles:
     name: towns
   picking:
     name: pickings
-  brewing-types:
+  brews:
     name: brews
   themes:
     name: themes
