--- a/data/yaml/themes.yaml
+++ b/data/yaml/themes.yaml
@@ -29,8 +29,8 @@
 - ideogram: 採摘標準
   pinyin: CǎiZhāi BiāoZhǔn
   fr: cueillette
-  en: picking
+  en: pickings
 - ideogram: 泡法
   pinyin: PàoFǎ
   fr: infusion
-  en: brewing-types
+  en: brews
